criado end point para trazer sugestão de apenas um usuário.
